--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-powershell",
-  "version": "4.0.0",
+  "name": "@swiftmr/node-powershell",
+  "version": "4.0.1",
   "description": "Easily run PowerShell from your NodeJS app",
   "main": "./lib/index.js",
   "files": [
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rannn505/node-powershell.git"
+    "url": "git+https://github.com/chlrlrhs95/child-shell.git"
   },
   "keywords": [
     "node-powershell",
@@ -60,9 +60,9 @@
   "author": "Ran Cohen <rannn505@outlook.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rannn505/node-powershell/issues"
+    "url": "https://github.com/chlrlrhs95/child-shell/issues"
   },
-  "homepage": "http://rannn505.github.io/node-powershell/",
+  "homepage": "https://github.com/chlrlrhs95/child-shell/",
   "dependencies": {
     "chalk": "^2.4.1",
     "shortid": "^2.2.14"
